objects/Community_Member_Activity__c.object
<CustomObject>
    <description>Community Member Activity represents an event that takes place on the community related to a particular community member.</description>
    <label>Community Member Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Member Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Community Member Activity is matched to an Account based on the Contact of the Community Member the activity relates to.</description>
        <inlineHelpText>Community Member Activity is matched to an Account based on the Contact of the Community Member the activity relates to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Community Member Activities</relationshipLabel>
        <relationshipName>Community_Member_Activities_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Community Member Activity is matched to a Contact based on the Community Member the activity relates to.</description>
        <inlineHelpText>Community Member Activity is matched to a Contact based on the Community Member the activity relates to.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Member Activities</relationshipLabel>
        <relationshipName>Community_Member_Activities_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Topic_ID__c</fullName>
        <description>The ID of a topic on the inSided community. This ID is unique per content type (question, conversation, article). You can use this when reporting to get data from a single topic even if the topic title has changed. Note: if the content type changes, then the topic ID will also change.</description>
        <inlineHelpText>The ID of a topic on the inSided community. This ID is unique per content type (question, conversation, article). You can use this when reporting to get data from a single topic even if the topic title has changed. Note: if the content type changes, then</inlineHelpText>
        <label>Topic ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A unique ID to identify an activity on the inSided platform.</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique ID to identify an activity on the inSided platform.</inlineHelpText>
        <label>Request ID</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Topic_Title__c</fullName>
        <description>The title of a topic on the community. This title can be changed.</description>
        <inlineHelpText>The title of a topic on the community. This title can be changed.</inlineHelpText>
        <label>Topic Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <description>The date/time at which the activity occurred on the community.</description>
        <inlineHelpText>The date/time at which the activity occurred on the community.</inlineHelpText>
        <label>Activity Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reply_Content__c</fullName>
        <description>The content of the reply (to a question, article, or conversation). This content can change.</description>
        <inlineHelpText>The content of the reply (to a question, article, or conversation). This content can change.</inlineHelpText>
        <label>Reply Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Topic_Content__c</fullName>
        <description>The content of the opening post of the community topic (question, article, conversation). This content can change.</description>
        <inlineHelpText>The content of the opening post of the community topic (question, article, conversation). This content can change.</inlineHelpText>
        <label>Topic Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Community_Member__c</fullName>
        <description>Community Member Activity must be related to a Community Member.</description>
        <inlineHelpText>Community Member Activity must be related to a Community Member.</inlineHelpText>
        <label>Community Member</label>
        <referenceTo>Community_Member__c</referenceTo>
        <relationshipLabel>Community Member Activities</relationshipLabel>
        <relationshipName>Community_Member_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reply_URL_Public__c</fullName>
        <description>A link to the reply in the frontend. If the topic or reply has been trashed, it cannot be viewed via this link.</description>
        <inlineHelpText>A link to the reply in the frontend. If the topic or reply has been trashed, it cannot be viewed via this link.</inlineHelpText>
        <label>Reply URL (Public)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Topic_URL_Public__c</fullName>
        <description>A link to the topic in the frontend. If the topic has been trashed, it cannot be viewed via this link.</description>
        <inlineHelpText>A link to the topic in the frontend. If the topic has been trashed, it cannot be viewed via this link.</inlineHelpText>
        <label>Topic URL (Public)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Topic_Category_ID__c</fullName>
        <description>The unique ID of a category on the inSided community. You can use this when reporting to get data from a single category even if the category name has changed. Note: this ID can change if a topic is moved to another category.</description>
        <inlineHelpText>The unique ID of a category on the inSided community. You can use this when reporting to get data from a single category even if the category name has changed. Note: this ID can change if a topic is moved to another category.</inlineHelpText>
        <label>Topic Category ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Category_Name__c</fullName>
        <description>The name of a category on the community. This name can change.</description>
        <inlineHelpText>The name of a category on the community. This name can change.</inlineHelpText>
        <label>Topic Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>